TEST_PROGRAMS/INVALID/04/12.go
package main

func main() {
    //Illegal multiple chars in rune
    var x = 'a '
    x++ // "use" x
}
